--- a/thesis.tex
+++ b/thesis.tex
@@ -59,6 +59,8 @@ Non\---polar helices figure prominently in structural biology, from the first pr
 
 By leveraging large datasets of trans-membrane proteins, this thesis is focused on characterizing features of $\alpha$ helices en masse, particularly regarding their topology, membrane\---protein interactions, and intra-membrane protein interactions.
 
+In this thesis I make the argument that there are different classifications of trans-membrane $\alpha$ helices. These have markedly different evolutionary pressures, different classes interact differently with the membrane, and serve the protein differently.
+
 \afterabstract{}
 
 %The preface section doesn't like being in a different document for some reason. (I think it's just my compiler, there is no reason why it shouldn't work)
