British spelling and grammar typos fixed

--- a/thesis.tex
+++ b/thesis.tex
@@ -4,7 +4,7 @@
 %Magic latex symbol finder: http://detexify.kirelabs.org/classify.html
 
 %This is just the standard line that tells the virtual "printer" what document we're making.
-% Remove the twoside option for single-sided printing
+% Remove the two side option for single-sided printing
 \documentclass[12pt,PhD,twoside]{muthesis}
 
 %These are the citation styles.
@@ -55,17 +55,17 @@
 
 
 \beforeabstract{} % Don't move the abstract, it doesn't like it.
-Non\---polar helices figure prominently in structural biology, from the first protein structure (myoglobin) through trans-membrane segments, to current work on recognition of protein trafficking and quality control. Trans-membrane $\alpha$ helix containing proteins make up around a quarter of all proteins, as well as two thirds of drug targets, and contain some of the most critical proteins required for life as we know it. Yet they are fundamentally difficult to study experimentally. This is in part due to the very features that make them so biologically influential: their non\---polar trans-membrane helix regions. What is missing in the current literature is a nuanced understanding of the complexities of the helix composition beyond a hydrophobic region of around 20 residues. Currently it is known that the properties of trans-membrane protein $\alpha$ helices underpin membrane protein insertion mechanisms.
+Non\---polar helices figure prominently in structural biology, from the first protein structure (myoglobin) through trans-membrane segments, to current work on recognition of protein trafficking and quality control. Trans-membrane $\alpha$ helix containing proteins makep around a quarter of all proteins, as well as two-thirds of drug targets, and contain some of the most critical proteins required for life as we know it. Yet they are fundamentally difficult to study experimentally. This is in part due to the very features that make them so biologically influential: their non\---polar trans-membrane helix regions. What is missing in the current literature is a nuanced understanding of the complexities of the helix composition beyond a hydrophobic region of around 20 residues. Currently, it is known that the properties of trans-membrane protein $\alpha$ helices underpin membrane protein insertion mechanisms.
 
-By leveraging large datasets of trans-membrane proteins, this thesis is focused on characterizing features of $\alpha$ helices en masse, particularly regarding their topology, membrane\---protein interactions, and intra-membrane protein interactions.
+By leveraging large datasets of trans-membrane proteins, this thesis is focused on characterising features of $\alpha$ helices en masse, particularly regarding their topology, membrane\---protein interactions, and intramembrane protein interactions.
 
-In this thesis I make the argument that there are different classifications of trans-membrane $\alpha$ helices. These have markedly different evolutionary pressures, different classes interact differently with the membrane, and serve the protein differently.
+In this thesis, I make the argument that there are different classifications of trans-membrane $\alpha$ helices. These have markedly different evolutionary pressures, these different classes interact differently with the membrane, and each class serve the protein differently.
 
 \afterabstract{}
 
 %The preface section doesn't like being in a different document for some reason. (I think it's just my compiler, there is no reason why it shouldn't work)
 \prefacesection{Acknowledgements}
-I would like to thank all members of both the Eisenhaber research group, as well as the the Curtis and Warwicker research group for discussion, but in particular Jim Warwicker, Frank Eisenhaber, Birgit Eisenhaber, and Wing-Cheong Wong for supervision and guidance during my research. I would also like to thank The University of Manchester and the A*STAR Singapore Bioinformatics Institute for funding the project. Furthermore I would like to extend my gratitude to the research group of Professor Stephen High.
+I would like to thank all members of both the Eisenhaber research group, as well as the Curtis and Warwicker research group for discussion, but in particular Jim Warwicker, Frank Eisenhaber, Birgit Eisenhaber, and Wing-Cheong Wong for supervision and guidance during my research. I would also like to thank The University of Manchester and the A*STAR Singapore Bioinformatics Institute for funding the project. Furthermore, I would like to extend my gratitude to the research group of Professor Stephen High.
 
 %Shout out to all the Biopython devs that saved my sanity!
 
