Added Ulmschneider2017 reference in Snorkelling explanation.

--- a/chapter_introduction.tex
+++ b/chapter_introduction.tex
@@ -11,6 +11,9 @@ In this chapter we will place the \gls{tmh} problem in context, then describe th
 
 Measurements of the \gls{tmh} regions have found that they are roughly 20 residues in length; 17.3$\pm$3.1 from 160 \gls{tmh}s~\cite{Hildebrand2004}, 27.1$\pm$5.4 residues based on 129 \gls{tmh}s~\cite{Ulmschneider2001}, 26.4 residues based on 45 \gls{tmh}s~\cite{Bowie1997}, 25.3$\pm$6.0 residues based on 702 \gls{tmh}s~\cite{Cuthbertson2005}, 24.6$\pm$5.6 from 837 \gls{tmh}s~\cite{Baeza-Delgado2013}, and 28.6$\pm$1.6\AA~to 33.5~$\pm$3.1\AA~from 191 proteins depending on membrane types~\cite{Pogozheva2013}. There are a couple of reasons for this variation. Primarily is that the boundaries of \gls{tmh}s are extremely hard to precisely identify since it is unclear exactly how far the \gls{tmh} rises into the water interface region~\cite{VonHeijne2006}. Secondly is that it is emerging that different membranes have different thicknesses~\cite{VanMeer2008}, and that this is directly reflected in the hydrophobic lengths of the \gls{tmh}~\cite{Sharpe2010, Pogozheva2013}.
 %WALP and KALP peptides as typical peptides
+
+
+
 \begin{figure}[!ht]
 \centering
 \includegraphics[width=1\textwidth]{Helix_anatomy}
@@ -41,7 +44,7 @@ Two publications by von Heijne coined the ``Positive-Inside'' rule demonstrated 
 
 \subsubsection{Snorkeling}
 
-Broadly speaking, \gls{tmh}s are non-polar. However, some contain polar and charged residues in the helix itself. Whilst this might seem thermodynamically unstable at first glance, a molecular dynamic feature called the ``snorkel'' effect explains in part how this is possible~\cite{Chamberlain2004, Strandberg2003}. Simply put, the snorkelling effect involves the long flexible side chain of leucine reaching the water interface region to interact with the polar headgroups of the bilayer even when the $\alpha$ helix backbone is pulled into the hydrophobic layer~\cite{Krishnakumar2007}. This has also been suggested to allow helices to adapt to varying thicknesses of the membrane~\cite{Kandasamy2006}.
+Broadly speaking, \gls{tmh}s are non-polar. However, some contain polar and charged residues in the helix itself. Whilst this might seem thermodynamically unstable at first glance, a molecular dynamic feature called the ``snorkel'' effect explains in part how this is possible~\cite{Chamberlain2004, Strandberg2003}. Simply put, the snorkelling effect involves the long flexible side chain of leucine reaching the water interface region to interact with the polar headgroups of the bilayer even when the $\alpha$ helix backbone is pulled into the hydrophobic layer~\cite{Krishnakumar2007}. This has also been suggested to allow helices to adapt to varying thicknesses of the membrane~\cite{Kandasamy2006}. More recently it was found that although in simulations the energetic cost of arginine at the centre of the \gls{tmh} is large, in vivo experimentation with the Sec61 translocon reveals a much smaller penalty~\cite{Ulmschneider2017}. That same study also found that in simulations, snorkeling, bilayer deformation, and peptide tilting combined to to be sufficient to lower the thermodynamic stability penalty of arginine insertion so that hydrophoic \gls{tmh}s with a central arginine residue will readily insert into the membrane.   
 
 
 \subsection{Hydrophobicity of Trans-membrane Segments}\label{ssection:hydrophobicityscales}
@@ -189,9 +192,3 @@ It is postulated that there are electrostatic factors in the flanking regions th
 
 
 \section{Aims of This Thesis.}
-
-\begin{enumerate}
-  \item Negative not inside rule.
-  \item \gls{snare} and \gls{ta} project.
-  \item Good and bad helices.
-\end{enumerate}
