--- a/references.bib
+++ b/references.bib
@@ -1,5 +1,16 @@
-
-
+@article{Ulmschneider2017,
+author = {Ulmschneider, Martin B. and Ulmschneider, Jakob P. and Freites, J. Alfredo and von Heijne, Gunnar and Tobias, Douglas J. and White, Stephen H.},
+doi = {10.1007/s00249-017-1206-x},
+file = {:home/jamesb/Documents/Mendeley Desktop/Ulmschneider et al. - 2017 - Transmembrane helices containing a charged arginine are thermodynamically stable.pdf:pdf},
+issn = {0175-7571},
+journal = {European Biophysics Journal},
+month = {apr},
+pages = {1--11},
+publisher = {Springer Berlin Heidelberg},
+title = {{Transmembrane helices containing a charged arginine are thermodynamically stable}},
+url = {http://link.springer.com/10.1007/s00249-017-1206-x},
+year = {2017}
+}
 @article{Baeza-Delgado2013,
 abstract = {Recent advances in determination of the high-resolution structure of membrane proteins now enable analysis of the main features of amino acids in transmembrane (TM) segments in comparison with amino acids in water-soluble helices. In this work, we conducted a large-scale analysis of the prevalent locations of amino acids by using a data set of 170 structures of integral membrane proteins obtained from the MPtopo database and 930 structures of water-soluble helical proteins obtained from the protein data bank. Large hydrophobic amino acids (Leu, Val, Ile, and Phe) plus Gly were clearly prevalent in TM helices whereas polar amino acids (Glu, Lys, Asp, Arg, and Gln) were less frequent in this type of helix. The distribution of amino acids along TM helices was also examined. As expected, hydrophobic and slightly polar amino acids are commonly found in the hydrophobic core of the membrane whereas aromatic (Trp and Tyr), Pro, and the hydrophilic amino acids (Asn, His, and Gln) occur more frequently in the interface regions. Charged amino acids are also statistically prevalent outside the hydrophobic core of the membrane, and whereas acidic amino acids are frequently found at both cytoplasmic and extra-cytoplasmic interfaces, basic amino acids cluster at the cytoplasmic interface. These results strongly support the experimentally demonstrated biased distribution of positively charged amino acids (that is, the so-called the positive-inside rule) with structural data.},
 author = {Baeza-Delgado, Carlos and Marti-Renom, Marc A. and Mingarro, Ismael},
