Completed references for results section

--- a/thesis.tex
+++ b/thesis.tex
@@ -36,6 +36,9 @@
 \newacronym{pdb}{PDB}{Protein Data Bank}
 \newacronym{sp}{SP}{Signal Peptide}
 \newacronym{snare}{SNARE}{Soluble N-Ethylmaleimide-Sensitive Factor Attachment Receptor}
+\newacronym{ks}{KS}{Kolmogorov-Smirnov}
+\newacronym{kw}{KW}{Kruskal-Wallis}
+
 \makeglossaries{}
 
 \begin{document}
@@ -96,6 +99,8 @@ Baker, J. A. and Warwicker, J. A Bioinformatic Method to Identify Potential SNAR
 \section*{List of Abbreviations}
 %Stick to alphabetical order
 \acrfull{er} \\
+\acrfull{ks} \\
+\acrfull{kw} \\
 \acrfull{md} \\
 \acrfull{pdb} \\
 \acrfull{pm} \\
@@ -107,6 +112,7 @@ Baker, J. A. and Warwicker, J. A Bioinformatic Method to Identify Potential SNAR
 \acrfull{tmh} \\
 \acrfull{tmp} \\
 \acrfull{tms} \\
+
 
 
 %This is where we call the chapters. No need to include ".tex". The chapters will be printed to the document in this order. To create a new chapter, make a new file, and add the name of the file below (without the file extension).
